--- a/clientApp/Angular.Web/src/app/app.component.html
+++ b/clientApp/Angular.Web/src/app/app.component.html
@@ -1,14 +1,5 @@
-<h1>{{title}}</h1>
+<app-nav></app-nav>
+<div class="container" style="margin-top:100px;">
+  <app-home></app-home>
 
-<ul>
-  <!--//using ngfor-->
-  <!--<li *ngFor="let user of users">
-    {{user.id}} - {{user.userName}}
-  </li>-->
-  <!--using @for-->
-  @for(user of users;track $index){
-  <li>
-    {{user.id}} - {{user.userName}}
-  </li>
-  }
-</ul>
+</div>
