--- a/clientApp/Angular.Web/src/app/nav/nav.component.html
+++ b/clientApp/Angular.Web/src/app/nav/nav.component.html
@@ -1,52 +1,50 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="#">Dating APP</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-      @if(accountService.currentUser()){
-      <ul class="navbar-nav me-auto mb-2 mb-md-0">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Matches</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Lists</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Messages</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" (click)="logout()">Logout</a>
-        </li>
-      </ul>
-      }
-      @if(accountService.currentUser()){
-      <div dropdown class="dropdown">
-        <a dropdownToggle class="dropdwon-toggle text-light" text-decoration-none>Welcome User</a>
-        <div *dropdownMenu class="dropdown-menu">
-          <a class="dropwdown-item">Edit Profile</a><br />
-          <div class="dropdown-divider"></div>
-          <a class="dropwdown-item" (click)="logout()">LogOut</a>
-        </div>
-      </div>
-      }
-      @if(!accountService.currentUser()){
-      <form #loginForm="ngForm" (ngSubmit)="login()" class="d-flex" autocomplete="off">
-        <input name="username"
-               [(ngModel)]="model.username"
-               type="text"
-               class="form-control me-2"
-               placeholder="UserName">
+    <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating APP</a>
 
-        <input type="password"
-               name="password"
-               [(ngModel)]="model.password"
-               class="form-control me-2"
-               placeholder="Password">
-        <button class="btn btn-outline-success" type="submit">Login</button>
-      </form>
+   
+    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      @if(accountService.currentUser()){
+      <li class="nav-item">
+        <a routerLink="/members" class="nav-link" routerLinkActive="active">Matches</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/lists" class="nav-link" routerLinkActive="active">Lists</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/messages" class="nav-link" routerLinkActive="active">Messages</a>
+      </li>
       }
+    </ul>
+    
+    @if(accountService.currentUser()){
+    <div dropdown class="dropdown">
+      <a dropdownToggle class="dropdwon-toggle text-light" text-decoration-none>
+        Welcome {{accountService.currentUser()?.username}}
+      </a>
+      <div *dropdownMenu class="dropdown-menu">
+        <a class="dropwdown-item">Edit Profile</a><br />
+        <div class="dropdown-divider"></div>
+        <a class="dropwdown-item" (click)="logout()">LogOut</a>
+      </div>
     </div>
+    }
+    @if(!accountService.currentUser()){
+    <form #loginForm="ngForm" (ngSubmit)="login()" class="d-flex" autocomplete="off">
+      <input name="username"
+             [(ngModel)]="model.username"
+             type="text"
+             class="form-control me-2"
+             placeholder="UserName">
+
+      <input type="password"
+             name="password"
+             [(ngModel)]="model.password"
+             class="form-control me-2"
+             placeholder="Password">
+      <button class="btn btn-success" type="submit">Login</button>
+    </form>
+    }
   </div>
+
 </nav>
