Update user and edit the user

--- a/clientApp/Angular.Web/src/app/nav/nav.component.html
+++ b/clientApp/Angular.Web/src/app/nav/nav.component.html
@@ -22,12 +22,12 @@
     </ul>
     @if(accountService.currentUser()){
     <div dropdown class="dropdown">
-      <a dropdownToggle class="dropdwon-toggle text-light" text-decoration-none>
+      <a dropdownToggle class="dropdwon-toggle text-light text-decoration-none">
         Welcome {{accountService.currentUser()?.userName
         }}
         </a>
         <div *dropdownMenu class="dropdown-menu">
-          <a class="dropwdown-item">Edit Profile</a><br />
+          <a routerLink="/member/edit"class="dropwdown-item">Edit Profile</a><br />
           <div class="dropdown-divider"></div>
           <a class="dropwdown-item" (click)="logout()">LogOut</a>
         </div>
